# Adverse-Impact-Mitigation

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml
.github/workflows/: black.yml  codecov.yml  pylint.yml  pytest.yml
ai_mitigation/: demo_utils.py  mitigator_results.py  models.py  mpo_mitigation.py  predictor_removal_mitigation.py  utils.py
ai_mitigation/tests/: example_data.py  test_demo_utils.py  test_mpo_mitigation.py  test_mpo_models.py  test_pr_mitigation.py  test_utils.py
examples/: Adverse Impact Mitigation Demo.ipynb  MPO Models.ipynb  example_data.py
tests/: test_mpo_models.py  test_pr_mitigation.py
